--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,9 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+             
+              },
+                 "src/assets"
             ],
             "styles": [
               "bootstrap/dist/css/bootstrap.min.css",
